# libs/portal/src/model/pastExamsHubCoreApplicationExamSoultionsModelsExamSolutionFileModel.ts
@@ -17,4 +17,5 @@ import { PastExamsHubCoreDomainEnumsFileType } from './pastExamsHubCoreDomainEnu
 
 export interface PastExamsHubCoreApplicationExamSoultionsModelsExamSolutionFileModel extends PastExamsHubCoreApplicationExamSoultionsModelsExamSolutionModel { 
     file?: string;
+    contentType?: string;
 }
